Refactored user code and created more swagger docs
